--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Book settings
 # Learn more at https://jupyterbook.org/customize/config.html
 
-title: Jupyter Book Template # Change this to your book title.
-author: Yen-Chia Hsu # Change this to your name (or your team/organization name).
+title: Europe's Economics And Happiness # Change this to your book title.
+author: N2 # Change this to your name (or your team/organization name).
 
 # Force re-execution of notebooks on each build.
 # See https://jupyterbook.org/content/execute.html
