--- a/_config.yml
+++ b/_config.yml
@@ -23,13 +23,13 @@ repository:
 # Add GitHub buttons to your book
 # See https://jupyterbook.org/customize/config.html#add-a-link-to-your-repository
 html:
-  use_issues_button: true
+  use_issues_button: false
   use_repository_button: true
 
 # Add launch buttons
 launch_buttons:
   binderhub_url: ""
-  colab_url: "https://colab.research.google.com"
+  colab_url: ""
   jupyterhub_url: ""
 
 sphinx:
